deploy MDS AI and RT forms v2.0 to DEV - add covid-19 ra types

--- a/mds_index.html
+++ b/mds_index.html
@@ -161,10 +161,10 @@
                         <a href="./mds/dossier/en/index.html">Dossier Enrolment -External (Feb 15, 2019, V1.0.0)</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Enrolment -External (Apr 15, 2020, V2.0.2)</a>
+                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Enrolment -External (Apr 21, 2020, V2.0.2 - COVID-19)</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (Apr 03, 2020, V2.0.2)</a>
+                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (Apr 21, 2020, V2.0.2 - COVID-19)</a>
                     </div>
                 </div>
                 <div>
@@ -198,7 +198,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Apr 15, 2020</dt>
+                    <dt>Date modified: Apr 21, 2020</dt>
                 </dl>
             </div>
         </div>
