deploy P/B VD/CT forms v4.0 to DEV - add covid-19 ra types

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <a href="./wet4027/company/company.html#main">Company Enrolment - External (Oct 22, 2019, v4.0.1 - Save Warning bug fix)</a>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Nov 27, 2019, v4.0.17)</a>
+                        <a href="./wet4027/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Apr 22, 2020, v4.0.17 - COVID19)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
@@ -242,7 +242,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Mar 20, 2020</dt>
+                    <dt>Date modified: Apr 22, 2020</dt>
                 </dl>
             </div>
         </div>
