deploy P/B VD/CT RT form v4.0 and CR RT form v3.1 to DEV - add covid-19 ra types

--- a/prod_index.html
+++ b/prod_index.html
@@ -163,7 +163,7 @@
                         <a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>
                     </div>
                     <div class="row">
-                        <a href="./prod_v3/transactionOld/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 10, 2019)</a>
+                        <a href="./prod_v3/transactionOld/regulatory-transaction.html#main">Old Regulatory Transaction Template - External (Oct 10, 2019)</a>
                     </div>
                     <!--<div class="row">-->
                         <!--<span>-->
@@ -171,7 +171,7 @@
                         <!--</span>-->
                     <!--</div>-->
                     <div class="row">
-                        <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Apr 06, 2020, v3.1.9 - Cost Recovery)</a>
+                        <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Apr 22, 2020, v3.1.9 - Cost Recovery - COVID-19)</a>
                     </div>
                     <!--<div class="row">-->
                         <!--<span>-->
@@ -235,7 +235,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Apr 06, 2020</dt>
+                    <dt>Date modified: Apr 22, 2020</dt>
                 </dl>
             </div>
 </main>
