deploy MD RT and CO forms v2.0.3 to DEV

--- a/mds/company/en/index.html
+++ b/mds/company/en/index.html
@@ -44,6 +44,20 @@
     document.write(wet.builder.refTop({
       cdnEnv: "prod" //jqueryEnv:false
     }));
+    function currentDate() {
+      var today = new Date();
+      var dd = today.getDate();
+      var mm = today.getMonth() + 1; //January is 0!
+      var yyyy = today.getFullYear();
+
+      if (dd < 10) {
+        dd = '0' + dd;
+      }
+      if (mm < 10) {
+        mm = '0' + mm;
+      }
+      return today = yyyy + '-' + mm + '-' + dd;
+    }
   </script>
 <link rel="stylesheet" href="styles.6f2dd3490adf76b4a62f.css"></head>
 
@@ -111,7 +125,7 @@
       var defPreFooter = document.getElementById("def-preFooter");
       defPreFooter.outerHTML = wet.builder.preFooter({
         cdnEnv: "prod",
-        dateModified: 'Mar 15, 2020',
+        dateModified: '2020-05-07',
         showPostContent: true,
         showFeedback:true,
         showShare:true
@@ -148,5 +162,5 @@
   <!-- endinject -->
 
 
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.085a9a9aedce6c541361.js" defer></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.326742dcc199d9bec57f.js" defer></script></body>
 </html>
