--- a/mds_index.html
+++ b/mds_index.html
@@ -155,7 +155,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/internal/company/en/index_internal.html#main">Company Enrolment</a>
+                        <a href="./mds/internal/company/en/index_internal.html#main">Company Enrolment (Last updated: May 12, 2020)</a>
                     </div>
                 </div>
             </div>
