--- a/mds_index.html
+++ b/mds_index.html
@@ -155,7 +155,7 @@
                         <h2> REP Form Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html#main">Company Enrolment</a>
+                        <a href="./mds/company/en/index.html#main">Company Enrolment (Last updated: May 12, 2020)</a>
                     </div>
                     <!--<div class="row">-->
                         <!--<a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/medical-device-dossier-template.html">Dossier Enrolment</a>-->
@@ -173,7 +173,7 @@
                         <h2>Stylesheet Download Link</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0 and v2.0 stylesheet zip file </a>
+                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0 and v2.0 stylesheet zip file (Last updated: May 12, 2020) </a>
                     </div>
                 </div>
             </div>
