deploy PB index pages update to DEV

--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -197,13 +197,35 @@
                 <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0 et .V3.1 (version française) </a>
             </div>
         </div>
+
+        <div>
+            <div class="row">
+                <h2>Liens de téléchargement du matériel de formation</h2>
+            </div>
+            <div class="row">
+                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/0898569b39ff4b9dadd605b5a02db759" target="_blank">
+                    Didacticiel vidéo PIR no. 1: Aperçu</a>
+            </div>
+            <div class="row">
+                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d09177475389406ab68812a2c665783e" target="_blank">
+                    Didacticiel vidéo PIR no. 2: Modèle d'entreprise</a>
+            </div>
+            <div class="row">
+                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/946838a1f5a34dd9a2ea05937b5d5886" target="_blank">
+                    Didacticiel vidéo PIR no. 3: Demande d'ID de dossier</a>
+            </div>
+            <div class="row">
+                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/12251a72bad24fc5865f0919d35a50fb" target="_blank">
+                    Didacticiel vidéo PIR no. 4: Modèles de transactions réglementaires et d'information sur le produit</a>
+            </div>
+        </div>
     </div>
     <!--content ends here -->
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 2020-03-27</dt>
+                <dt>Date de modification : 2020-05-14</dt>
             </dl>
         </div>
     </div>
