--- a/prod_index.html
+++ b/prod_index.html
@@ -212,14 +212,27 @@
                     </div>
                 </div>
 
-                <!--<div>-->
-                    <!--<div class="row">-->
-                        <!--<h2>Old Regulatory Enrolment Process Before WCAG: Pharma/Bio</h2>-->
-                    <!--</div>-->
-                    <!--<div class="row">-->
-                        <!--<a href="./before_wcag_index.html">Pharma/Bio Forms Before WCAG </a>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div>
+                    <div class="row">
+                        <h2>Training Material Download Links</h2>
+                    </div>
+                    <div class="row">
+                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/3451b4a2954249f6a032de60dc9b3d7c" target="_blank">
+                            REP Video Tutorial #1: Overview </a>
+                    </div>
+                    <div class="row">
+                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fb583e58b08a4c78a5dc5685c521f524" target="_blank">
+                            REP Video Tutorial #2: Company Template</a>
+                    </div>
+                    <div class="row">
+                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d8af0eb2e7744a77b630982a18fea219" target="_blank">
+                            REP Video Tutorial #3: Dossier ID Request Form</a>
+                    </div>
+                    <div class="row">
+                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fcb2ba623a914c689eca4294b1dc50c9" target="_blank">
+                            REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
+                    </div>
+                </div>
 
             </div>
 
@@ -235,7 +248,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Apr 22, 2020</dt>
+                    <dt>Date modified: 2020-05-14</dt>
                 </dl>
             </div>
 </main>
