deploy PB update to DEV - training video links added to index pages

--- a/index.html
+++ b/index.html
@@ -244,6 +244,11 @@
                     <h2>Training Material Download Links</h2>
                 </div>
                 <div class="row">
+                        <span>
+                            <strong>Note: Please disregard the text displayed when you open link.  The video will begin when you click play.</strong>
+                        </span>
+                </div>
+                <div class="row">
                     <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/3451b4a2954249f6a032de60dc9b3d7c" target="_blank">
                         REP Video Tutorial #1: Overview </a>
                 </div>
