--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -203,6 +203,11 @@
                 <h2>Liens de téléchargement du matériel de formation</h2>
             </div>
             <div class="row">
+                <span>
+                    <strong>Remarque: Veuillez omettre le texte affiché lorsque vous ouvrez le lien. Le vidéo commencera une fois que vous sélectionnez lecture.</strong>
+                </span>
+            </div>
+            <div class="row">
                 <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/0898569b39ff4b9dadd605b5a02db759" target="_blank">
                     Didacticiel vidéo PIR no. 1: Aperçu</a>
             </div>
