deploy PB update to DEV - training video links added to index pages 2

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="row">
                         <span>
-                            <strong>Note: Please disregard the text displayed when you open link.  The video will begin when you click play.</strong>
+                            <strong>Note: Please disregard the text displayed when you open the link.  The video will begin when you click play.</strong>
                         </span>
                 </div>
                 <div class="row">
