--- a/prod_v3/company/company.html
+++ b/prod_v3/company/company.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Company Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2020-02-27">
+    <meta property="dcterms.modified" title="W3CDTF" content="2020-05-21">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -98,7 +98,7 @@
         showPreContent: false,
         breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en.html"},
             {title: "Health Canada", href: "https://www.canada.ca/en/health-canada.html"},
-            {title: "Regulatory Enrolment Process", href: "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process.html"}]
+            {title: "Regulatory Enrolment Process", href: "https://health-products.canada.ca/rep-pir/index.html"}]
     });
 </script>
 
@@ -149,7 +149,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2020-02-27"
+            dateModified: "2020-05-21"
         });
     </script>
 </main>
@@ -189,7 +189,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppEXT-en_20200227_1100.min.js"></script>
+<script src="app/scripts/companyAppEXT-en_20200521_1151.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
