--- a/prod_index.html
+++ b/prod_index.html
@@ -151,7 +151,7 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v3/company/company.html#main">Company Enrolment - External (May 22, 2020, v3.1.9)</a>
+                        <a href="./prod_v3/company/company.html#main">Company Enrolment - External (Jun 15, 2020, v3.1.1 live)</a>
                     </div>
                     <!--<div class="row">-->
                         <!--<a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>-->
@@ -184,7 +184,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (May 22, 2020, v3.1.9) </a>
+                        <a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (Jun 15, 2020, v3.1.1 live) </a>
                     </div>
                     <!--<div class="row">-->
                         <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
@@ -253,7 +253,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-06-08</dt>
+                    <dt>Date modified: 2020-06-15</dt>
                 </dl>
             </div>
 </main>
