--- a/mds_index.html
+++ b/mds_index.html
@@ -148,23 +148,47 @@
 
             <div>
                 <div class="row">
-                    <h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Med Device  </h1>
+                    <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Medical Devices </h1>
                 </div>
                 <div>
                     <div class="row">
-                        <h2> External User Links</h2>
+                        <h2>REP Template & Form Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html#main">Company Enrolment -External (May 19, 2020, V2.0.4)</a>
+                        <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/dossier/en/index.html">Dossier Enrolment -External (Feb 15, 2019, V1.0.0)</a>
+                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: May 19, 2020)</a>
+                        <ul>
+                            <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
+                            <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (application).</li>
+                            <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the company template.</li>
+                        </ul>
                     </div>
                     <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Enrolment -External (May 14, 2020, V2.0.2)</a>
+                        <a href="./mds/dossier/en/index.html">Dossier ID Request Form for Medical Devices (Last updated: Feb 15, 2019)</a>
+                        <ul>
+                            <li>Required to obtain a Dossier ID. </li>
+                            <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (application). </li>
+                        </ul>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (Apr 23, 2020, V2.0.2)</a>
+                        <h2>Within the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./mds/transaction/en/index.html#main">Regulatory Transaction Template (Last updated: Apr 23, 2020)</a>
+                        <ul>
+                            <li>Sent via the CESG in within the regulatory transaction (application).</li>
+                            <li>Required with each regulatory transaction filed to Health Canada.</li>
+                            <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the RT template.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
+                        <ul>
+                            <li>Sent via the CESG in within a regulatory transaction (application).</li>
+                            <li>Required when filing a new regulatory activity for CTA, CTA-A, Private label or when providing changes to product information in a subsequent transaction for an existing regulatory activity.</li>
+                        </ul>
                     </div>
                 </div>
                 <div>
@@ -198,7 +222,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-05-19</dt>
+                    <dt>Date modified: 2020-06-15</dt>
                 </dl>
             </div>
         </div>
