deploy Production v3.1.1 live update to Production internal site

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: April 01, 2020</dt>
+            <dt>Date modified: 2020-06-15</dt>
         </dl>
     </div>
     </div>
