update home page files to DEV

--- a/prod_index.html
+++ b/prod_index.html
@@ -144,71 +144,97 @@
     <!--content starts here -->
             <div>
                 <div class="row">
-                    <h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Pharma/Bio </h1>
+                    <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Pharmaceuticals and Biologics</h1>
                 </div>
                 <div>
                     <div class="row">
-                        <h2> External User Links</h2>
+                        <h2>REP Templates & Form Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v3/company/company.html#main">Company Enrolment - External (Jun 15, 2020, v3.1.1 live)</a>
+                        <h2>Outside the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v3/company/company.html#main">Company (CO) Template (updated June 2020)</a>
+                        <ul>
+                            <li> Required to obtain a company ID and/or providing updated company information to Health Canada.</li>
+                            <li> Sent via the CESG as a separate transaction; outside of the regulatory transaction (submission).</li>
+                            <li> Refer to section “2.3 Enrolment Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #2 below for detailed requirements for the CO template. </li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form (updated February 2020)</a>
+                        <ul>
+                            <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
+                            <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
+                            <li> Refer to REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h2>Within the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction (RT) Template (updated June 2020)</a>
+                        <ul>
+                            <li> Required with each regulatory transaction filed to Health Canada.</li>
+                            <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (submission).</li>
+                            <li> Refer to section “2.4 Submission Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v3/product/product.html#main">Product Information (PI) Template (updated June 2020)</a>
+                        <ul>
+                            <li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>
+                            <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (when provided).</li>
+                            <li> Refer to sections “2.4 Submission Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
+                        </ul>
                     </div>
                     <!--<div class="row">-->
-                        <!--<a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>-->
+                        <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
                     <!--</div>-->
-                    <div class="row">
-                        <a href="./prod_v3/product/product.html#main">Product Information Template - External (Jun 08, 2020, v3.1.9)</a>
-                    </div>
-                    <div class="row">
-                        <a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>
-                    </div>
-                    <div class="row">
-                        <a href="./prod_v3/transactionOld/regulatory-transaction.html#main">Old Regulatory Transaction Template - External (Oct 10, 2019)</a>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./prod_v3/transactionOld/regulatory-transaction.html#main">Old Regulatory Transaction Template - External (Oct 10, 2019)</a>-->
+                    <!--</div>-->
                     <!--<div class="row">-->
                         <!--<span>-->
                             <!--<strong class="text-danger">Important Note: This template is to be used for regulatory transactions intended for filing BEFORE April 1, 2020 ONLY.</strong>-->
                         <!--</span>-->
                     <!--</div>-->
-                    <div class="row">
-                        <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (May 29, 2020, v3.1.9 - Cost Recovery - COVID-19)</a>
-                    </div>
                     <!--<div class="row">-->
                         <!--<span>-->
                             <!--<strong class="text-danger">Important Note: This template includes the revised Fees effective April 1, 2020 and should be used for regulatory transactions intended for filing on or AFTER April 1, 2020.</strong>-->
                         <!--</span>-->
                     <!--</div>-->
                 </div>
-                <div>
-                    <div class="row">
-                        <h2>Internal User (i.e. HPFB) Links</h2>
-                    </div>
-                    <div class="row">
-                        <a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (Jun 15, 2020, v3.1.1 live) </a>
-                    </div>
+                <!--<div>-->
                     <!--<div class="row">-->
-                        <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
+                        <!--<h2>Internal User (i.e. HPFB) Links</h2>-->
                     <!--</div>-->
-                    <div class="row">
-                        <a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>
-                    </div>
-                </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (Jun 15, 2020, v3.1.1 live) </a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;<div class="row">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--<div class="row">-->
+                        <!--<a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div>
                     <div class="row">
                         <h2>Stylesheet Download Link</h2>
                     </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Jun 02, 2020) </a>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Jun 02, 2020) </a>-->
+                    <!--</div>-->
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>
-                    </div>
-                    <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Jun 02, 2020) </a>
-                    </div>
-                    <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Jun 02, 2020) </a>
-                    </div>
-                    <div class="row">
-                        <a href="./prod_v3/stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V3.1 stylesheet zip file (English version, Jun 02, 2020) </a>
+                        <a href="./prod_v3/stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V3.1 stylesheet zip file (Updated 2020-06-02) </a>
                     </div>
                 </div>
 
@@ -217,24 +243,19 @@
                         <h2>Training Material Download Links</h2>
                     </div>
                     <div class="row">
-                        <span>
-                            <strong>Note: Please disregard the text displayed when you open the link.  The video will begin when you click play.</strong>
-                        </span>
-                    </div>
-                    <div class="row">
-                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/3451b4a2954249f6a032de60dc9b3d7c" target="_blank">
+                        <a href="./videos/REP_video_tutorial_1.mp4" target="_blank">
                             REP Video Tutorial #1: Overview </a>
                     </div>
                     <div class="row">
-                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fb583e58b08a4c78a5dc5685c521f524" target="_blank">
+                        <a href="./videos/REP_video_tutorial_2.mp4" target="_blank">
                             REP Video Tutorial #2: Company Template</a>
                     </div>
                     <div class="row">
-                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d8af0eb2e7744a77b630982a18fea219" target="_blank">
+                        <a href="./videos/REP_video_tutorial_3.mp4" target="_blank">
                             REP Video Tutorial #3: Dossier ID Request Form</a>
                     </div>
                     <div class="row">
-                        <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fcb2ba623a914c689eca4294b1dc50c9" target="_blank">
+                        <a href="./videos/REP_video_tutorial_4.mp4" target="_blank">
                             REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
                     </div>
                 </div>
@@ -253,7 +274,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-06-15</dt>
+                    <dt>Date modified: 2020-06-30</dt>
                 </dl>
             </div>
 </main>
