--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -145,34 +145,60 @@
         </div>
         <div>
             <div class="row">
-                <h2>Liens de modèle</h2>
+                <h2>Liens de modèle et le de formulaire</h2>
             </div>
             <div class="row">
-                <a href="./prod_v3/company/entreprise.html#main">Modèle de l'entreprise (mise à jour mars 2020)</a>
+                <h2>En dehors du processus de transaction réglementaire</h2>
+            </div>
+            <div class="row">
+                <a href="./prod_v3/company/entreprise.html#main">Modèle de l'entreprise (mise à jour juin 2020)</a>
+                <ul>
+                    <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
+                    <li> Envoyé via la PCDC en tant que transaction distincte; en dehors de la transaction réglementaire (soumission).</li>
+                    <li> Reportez-vous à la section «2.3 Processus d'inscription» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 2 ci-dessous pour les exigences détaillées du modèle CO.</li>
+                </ul>
             </div>
             <br>
-            <!--<div class="row">-->
-            <!--<a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>-->
-            <!--</div>-->
             <div class="row">
-                <a href="./prod_v3/product/produit.html#main">Modèle d'information sur le produit (mise à jour mars 2020)</a>
+                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers (mise à jour fév. 2020</a>
+                <ul>
+                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
+                    <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
+                    <li> Reportez-vous au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
+                </ul>
+            </div>
+            <div class="row">
+                <h2>Dans le cadre du processus de transaction réglementaire</h2>
+            </div>
+            <div class="row">
+                <a href="./prod_v3/product/produit.html#main">Modèle d'information sur le produit (mise à jour juin 2020)</a>
+                <ul>
+                    <li> Obligatoire lors du dépôt d'une nouvelle activité réglementaire pour un PDN, SPDN, PADN, SPADN, PM, DDIN (tous types) ou CPA, ou lors d'une transaction ultérieure pour une activité réglementaire existante.</li>
+                    <li> Envoyé via la PDCD dans le dossier 1.2.1 de la transaction réglementaire (si fourni).</li>
+                    <li> Reportez-vous aux sections "2.4 Processus de soumission" et "3.2 Structure des dossiers" du document d'orientation REP, et au didacticiel vidéo REP # 4, pour une description détaillée des exigences pour les modèles RT et PI.</li>
+                </ul>
             </div>
             <br>
             <!--<div class="row">-->
                 <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./prod_v3/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour octobre 2019) </a>
+                <a href="./prod_v3/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour juin 2020)</a>
+                <ul>
+                    <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
+                    <li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>
+                    <li> Reportez-vous à la section «2.4 Processus de soumission» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 4, pour une description détaillée des exigences pour les modèles RT et PI.</li>
+                </ul>
             </div>
             <!--<div class="row">-->
                         <!--<span>-->
                             <!--<strong class="text-danger">Remarque importante: Ce modèle doit être utilisé pour les transactions réglementaires prévues à être déposées AVANT le 1er avril 2020 SEULEMENT.</strong>-->
                         <!--</span>-->
             <!--</div>-->
-            <br>
-            <div class="row">
-                <a href="./prod_v3/transactionCostRecovery/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour mars 2020) </a>
-            </div>
+            <!--<br>-->
+            <!--<div class="row">-->
+                <!--<a href="./prod_v3/transactionCostRecovery/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour mars 2020) </a>-->
+            <!--</div>-->
             <!--<div class="row">-->
                         <!--<span>-->
                             <!--<strong class="text-danger">Remarque importante: Ce modèle comprend les frais révisés à partir du 1er avril 2020 et devrait être utilisé pour les transactions réglementaires prévues à être déposées le 1er avril 2020 ou APRÈS.</strong>-->
@@ -194,33 +220,28 @@
                 <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Feb 27, 2020) </a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0 et .V3.1 (version française) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0 et V3.1 (mise à jour mars juin 2020) </a>
             </div>
         </div>
 
         <div>
             <div class="row">
-                <h2>Liens de téléchargement du matériel de formation</h2>
+                <h2>Liens de téléchargement du didacticiel vidéo</h2>
             </div>
             <div class="row">
-                <span>
-                    <strong>Remarque: Veuillez omettre le texte affiché lorsque vous ouvrez le lien. Le vidéo commencera une fois que vous sélectionnez lecture.</strong>
-                </span>
-            </div>
-            <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/0898569b39ff4b9dadd605b5a02db759" target="_blank">
+                <a href="./videos/video_didacticiel_PIR_1.mp4" target="_blank">
                     Didacticiel vidéo PIR no. 1: Aperçu</a>
             </div>
             <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d09177475389406ab68812a2c665783e" target="_blank">
+                <a href="./videos/video_didacticiel_PIR_2.mp4" target="_blank">
                     Didacticiel vidéo PIR no. 2: Modèle d'entreprise</a>
             </div>
             <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/946838a1f5a34dd9a2ea05937b5d5886" target="_blank">
+                <a href="./videos/video_didacticiel_PIR_3.mp4" target="_blank">
                     Didacticiel vidéo PIR no. 3: Demande d'ID de dossier</a>
             </div>
             <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/12251a72bad24fc5865f0919d35a50fb" target="_blank">
+                <a href="./videos/video_didacticiel_PIR_4.mp4" target="_blank">
                     Didacticiel vidéo PIR no. 4: Modèles de transactions réglementaires et d'information sur le produit</a>
             </div>
         </div>
@@ -230,7 +251,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 2020-05-14</dt>
+                <dt>Date de modification : 2020-06-30</dt>
             </dl>
         </div>
     </div>
