--- a/vdct_index.html
+++ b/vdct_index.html
@@ -226,24 +226,19 @@
                     <h2>Training Material Download Links</h2>
                 </div>
                 <div class="row">
-                        <span>
-                            <strong>Note: Please disregard the text displayed when you open the link.  The video will begin when you click play.</strong>
-                        </span>
-                </div>
-                <div class="row">
-                    <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/3451b4a2954249f6a032de60dc9b3d7c" target="_blank">
+                    <a href="./videos/REP_video_tutorial_1.mp4" target="_blank">
                         REP Video Tutorial #1: Overview </a>
                 </div>
                 <div class="row">
-                    <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fb583e58b08a4c78a5dc5685c521f524" target="_blank">
+                    <a href="./videos/REP_video_tutorial_2.mp4" target="_blank">
                         REP Video Tutorial #2: Company Template</a>
                 </div>
                 <div class="row">
-                    <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d8af0eb2e7744a77b630982a18fea219" target="_blank">
+                    <a href="./videos/REP_video_tutorial_3.mp4" target="_blank">
                         REP Video Tutorial #3: Dossier ID Request Form</a>
                 </div>
                 <div class="row">
-                    <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fcb2ba623a914c689eca4294b1dc50c9" target="_blank">
+                    <a href="./videos/REP_video_tutorial_4.mp4" target="_blank">
                         REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
                 </div>
             </div>
@@ -251,7 +246,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-06-15</dt>
+                    <dt>Date modified: 2020-06-22</dt>
                 </dl>
             </div>
         </div>
