--- a/prod_index.html
+++ b/prod_index.html
@@ -243,19 +243,19 @@
                         <h2>Training Material Download Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./videos/REP_video_tutorial_1.mp4" target="_blank">
+                        <a href="https://youtu.be/_JsPzq5Dmdo" target="_blank">
                             REP Video Tutorial #1: Overview </a>
                     </div>
                     <div class="row">
-                        <a href="./videos/REP_video_tutorial_2.mp4" target="_blank">
+                        <a href="https://youtu.be/a09eruLX1LM" target="_blank">
                             REP Video Tutorial #2: Company Template</a>
                     </div>
                     <div class="row">
-                        <a href="./videos/REP_video_tutorial_3.mp4" target="_blank">
+                        <a href="https://youtu.be/W9O0ZuY6FtQ" target="_blank">
                             REP Video Tutorial #3: Dossier ID Request Form</a>
                     </div>
                     <div class="row">
-                        <a href="./videos/REP_video_tutorial_4.mp4" target="_blank">
+                        <a href="https://youtu.be/QKiSau4Zpp0" target="_blank">
                             REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
                     </div>
                 </div>
